--- a/themes/medius/static/css/main.css
+++ b/themes/medius/static/css/main.css
@@ -10,7 +10,7 @@ html, button, input, select, textarea, .pure-g [class*="pure-u"] { font-family: 
 div.metabar-container { height: 65px; position: absolute; top: 0; height: 65px; width: 100%; }
 div.metabar-container div.metabar { height: 100%; box-shadow: 0 0 1px rgba(0, 0, 0, 0.15); }
 
-div.post-content, div.entry-content { font-family: "Source Sans Pro", freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif; }
+div.post-content, div.entry-content { font-family: "Source Sans Pro", freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif; text-align:justify }
 div.post-content h1, div.post-content h2, div.post-content h3, div.post-content h4, div.post-content h5, div.post-content h6, div.entry-content h1, div.entry-content h2, div.entry-content h3, div.entry-content h4, div.entry-content h5, div.entry-content h6 { font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif; font-weight: normal; }
 div.post-content h1, div.post-content h2, div.entry-content h1, div.entry-content h2 { font-size: 36px; }
 div.post-content h3, div.entry-content h3 { font-size: 32px; }
@@ -67,7 +67,7 @@ div.post-meta div.meta-data a.author { color: inherit; }
 div.post-meta div.meta-data a.author:hover { color: rgba(0, 0, 0, 0.6); }
 
 div.page-container { text-align: center; margin-top: 80px; }
-div.page-container div.entry-content { max-width: 700px; margin: 0 auto; text-align: left; font-family: "Source Sans Pro", freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif; font-size: 18px; line-height: 1.5; padding: 20px; }
+div.page-container div.entry-content { max-width: 700px; margin: 0 auto; text-align: justify; font-family: "Source Sans Pro", freight-text-pro, Georgia, Cambria, "Times New Roman", Times, serif; font-size: 18px; line-height: 1.5; padding: 20px; }
 @media screen and (min-width: 35.5em) { div.page-container div.entry-content { font-weight: 300; line-height: 1.6; } }
 div.page-container footer { margin: 0 auto; text-align: left; max-width: 700px; }
 div.page-container footer div.post-footer { padding: 20px; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(0, 0, 0, 0.1); margin: 30px 0 40px 0; }
